# Gengine

./: CMakeLists.txt  main.cpp
src/Window/: window.cpp  window.h
src/graphics/: Shader.cpp  Shader.h  Window.cpp  window.cpp  window.h
src/math/: Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  math.h  maths.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/shaders/: basic.frag
src/utils/: fileutils.cpp  fileutils.h
